# zenskar-mcp-server

./: .env.example  .gitignore  Procfile  README.md  llms.txt  pyproject.toml  render.yaml
docs/superpowers/plans/: 2026-05-17-llm-referral-tracking.md
docs/superpowers/specs/: 2026-05-17-llm-referral-tracking-design.md
mcp_server/: config.py  server.py
mcp_server/clients/: bing.py  ga4.py  gdocs.py  google_ads.py  gsc.py  hubspot.py  recommendations.py
mcp_server/tools/: __init__.py  _shared.py  ads_tools.py  bing_tools.py  ga4_tools.py  gdocs_tools.py  gsc_tools.py  hubspot_tools.py  recommendations_tools.py
tests/: test_ga4_client.py
